<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P0341_SimpleSQLite</string>
    <string name="action_settings">Settings</string>
    <string name="john">John Smith</string>
    <string name="textName">Name</string>
    <string name="email">smth@mail.ru</string>
    <string name="textEmail">Email</string>
    <string name="add">Add</string>
    <string name="read">Read</string>
    <string name="clear">Clear</string>
    <string name="zero">0</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="id">Id</string>

</resources>
